k8s-manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diplom-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: diplom
  template:
    metadata:
      labels:
        app: diplom
    spec:
      containers:
      - name: diplom
        image: edmon2106/diplom-django:test
